--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -36,7 +36,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="/">My Django Blog</a>
+                    <a class="brand" href="/">Reg3x Blog</a>
                     <div class="nav-collapse collapse">
                     </div>
                 </div>
