--- a/templates/blogengine/post_detail.html
+++ b/templates/blogengine/post_detail.html
@@ -3,14 +3,14 @@
     {% load custom_markdown %}
 
     {% block content %}
-
         <div class="post">
-            <h1>{{ object.title }}</h1>
-            <h3>{{ object.pub_date }}</h3>
-            {{ object.text|custom_markdown }}
+        <h1>{{ object.title }}</h1>
+        <h3>{{ object.pub_date }}</h3>
+        {{ object.text|custom_markdown }}
+        <a href="{{ object.category.get_absolute_url }}">{{ object.category.name }}</a>
 
-            <h4>Comments</h4>
-            <div class="fb-comments" data-href="http://{{ post.site }}{{ post.get_absolute_url }}" data-width="470" data-num-posts="10"></div>
+        <h4>Comments</h4>
+        <div class="fb-comments" data-href="http://{{ post.site }}{{ post.get_absolute_url }}" data-width="470" data-num-posts="10"></div>
 
         </div>
 
