--- a/templates/blogengine/post_list.html
+++ b/templates/blogengine/post_list.html
@@ -3,19 +3,20 @@
     {% load custom_markdown %}
 
     {% block content %}
-        {% for post in object_list%}
+        {% for post in object_list %}
         <div class="post">
-            <h1><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h1>
-            <h3>{{ post.pub_date }}</h3>
-            {{ post.text|custom_markdown }}
+        <h1><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h1>
+        <h3>{{ post.pub_date }}</h3>
+        {{ post.text|custom_markdown }}
         </div>
+        <a href="{{ post.category.get_absolute_url }}">{{ post.category.name }}</a>
         {% endfor %}
 
         {% if page_obj.has_previous %}
-            <a href="/{{ page_obj.previous_page_number }}/">Previous Page</a>
+        <a href="/{{ page_obj.previous_page_number }}/">Previous Page</a>
         {% endif %}
         {% if page_obj.has_next %}
-            <a href="/{{ page_obj.next_page_number }}/">Next Page</a>
+        <a href="/{{ page_obj.next_page_number }}/">Next Page</a>
         {% endif %}
 
     {% endblock %}
