--- a/templates/blogengine/post_list.html
+++ b/templates/blogengine/post_list.html
@@ -1,25 +1,33 @@
 {% extends "blogengine/includes/base.html" %}
 
-    {% load custom_markdown %}
+{% load custom_markdown %}
 
-    {% block content %}
+{% block content %}
+
+    {% if object_list %}
         {% for post in object_list %}
-        <div class="post">
-        <h1><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h1>
-        <h3>{{ post.pub_date }}</h3>
-        {{ post.text|custom_markdown }}
-        </div>
-        <a href="{{ post.category.get_absolute_url }}">{{ post.category.name }}</a>
-        {% for tag in post.tags.all %}
-        <a href="{{ tag.get_absolute_url }}">{{ tag.name }}</a>
-        {% endfor %}
-        {% endfor %}
+            <div class="post">
+                <h1><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h1>
+                <h3>{{ post.pub_date }}</h3>
+                {{ post.text|custom_markdown }}
+            </div>
+            <a href="{{ post.category.get_absolute_url }}">{{ post.category.name }}</a>
 
-        {% if page_obj.has_previous %}
+            {% for tag in post.tags.all %}
+                <a href="{{ tag.get_absolute_url }}">{{ tag.name }}</a>
+            {% endfor %}
+
+        {% endfor %}
+    {% else %}
+        <p>no post found</p>
+    {% endif %}
+
+    {% if page_obj.has_previous %}
         <a href="/{{ page_obj.previous_page_number }}/">Previous Page</a>
-        {% endif %}
-        {% if page_obj.has_next %}
-        <a href="/{{ page_obj.next_page_number }}/">Next Page</a>
-        {% endif %}
+    {% endif %}
 
-    {% endblock %}
+    {% if page_obj.has_next %}
+        <a href="/{{ page_obj.next_page_number }}/">Next Page</a>
+    {% endif %}
+
+{% endblock %}
