--- a/templates/blogengine/post_list.html
+++ b/templates/blogengine/post_list.html
@@ -19,7 +19,7 @@
 
         {% endfor %}
     {% else %}
-        <p>no post found</p>
+        <p>No posts found</p>
     {% endif %}
 
     {% if page_obj.has_previous %}
