--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -40,17 +40,25 @@
             }(document, 'script', 'facebook-jssdk'));
         </script>
 
-
         <div class="navbar navbar-static-top navbar-inverse">
-            <div class="navbar-inner">
-                <div class="container">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#header-nav">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </a>
-                    <a class="brand" href="/">Reg3x Blog</a>
-                    <div class="nav-collapse collapse">
+                    </button>
+                    <a class="navbar-brand" href="/">Reg3x</a>
+                </div>
+                    <div class="collapse navbar-collapse" id="header-nav">
+                        <ul class="nav navbar-nav">
+                            {% load flatpages %}
+                            {% get_flatpages as flatpages %}
+                            {% for flatpage in flatpages %}
+                            <li><a href="{{ flatpage.url }}">{{ flatpage.title }}</a></li>
+                            {% endfor %}
+                            <li><a href="/feeds/posts/">RSS feed</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -59,7 +67,7 @@
         <div class="container">
             {% block header %}
                 <div class="page-header">
-                    <h1>My Django Blog</h1>
+                    <h1>Coding Blog</h1>
                 </div>
             {% endblock %}
 
@@ -75,6 +83,7 @@
                 </div>
             </div>
         </div>
+
 
 
 
