--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap-theme.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
         <link rel="stylesheet" href="{% static 'css/code.css' %}">
+        <link rel="stylesheet" href="{% static 'css/footer.css' %}">
         <script src="{% static 'bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js' %}"></script>
 
     </head>
@@ -27,7 +28,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
+        <!-- Facebook SDK -->
 
         <div id="fb-root"></div>
         <script>
@@ -40,51 +41,124 @@
             }(document, 'script', 'facebook-jssdk'));
         </script>
 
-        <div class="navbar navbar-static-top navbar-inverse">
-            <div class="container-fluid">
+        <!-- Navegation bar -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#header-nav">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">Reg3x</a>
+                    <a class="navbar-brand" href="#">Blog</a>
                 </div>
-                    <div class="collapse navbar-collapse" id="header-nav">
-                        <ul class="nav navbar-nav">
-                            {% load flatpages %}
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="">Posts</a></li>
+                        {% load flatpages %}
                             {% get_flatpages as flatpages %}
                             {% for flatpage in flatpages %}
-                            <li><a href="{{ flatpage.url }}">{{ flatpage.title }}</a></li>
+                                <li><a href="{{ flatpage.url }}">{{ flatpage.title }}</a></li>
                             {% endfor %}
-                            <li><a href="/feeds/posts/">RSS feed</a></li>
-                        </ul>
+			            <li><a href="/feeds/posts/">RSS feed</a></li>
+                    </ul>
+                    <form class="navbar-form navbar-right" role="search">
+                        <div class="form-group">
+                          <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
+                </div><!--/.nav-collapse -->
+            </div>
+        </nav>
+
+            <div class="container-fluid">
+                <div class="jumbotron">
+                    <h1>Code Blog</h1>
+                </div>
+
+                <!-- Paginator buttons -->
+                <div class="col-sm-8">
+                    {% block content %}{% endblock %}
+                    <ul class="pager col-sm-12">
+                        {% if page_obj.has_previous %}
+                            <li class="previous"><a href="/{{ page_obj.previous_page_number }}/">Previous Page</a></li>
+                        {% endif %}
+
+                        {% if page_obj.has_next %}
+                            <li class="next"><a href="/{{ page_obj.next_page_number }}/">Next Page</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+
+                <!-- Side bar -->
+                <div class="col-sm-3 col-sm-offset-1">
+                    <div class="panel panel-default">
+
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Categories</h3>
+                        </div>
+                        <div class="panel-body">
+                        <!-- Categories  -->
+                            <ul class="list-group">
+                                <li class="list-group-item">
+                                    <span class="badge">23</span>
+                                    Development
+                                </li>
+                                <li class="list-group-item">
+                                    <span class="badge">14</span>
+                                    Tools
+                                </li>
+                                <li class="list-group-item">
+                                    <span class="badge">14</span>
+                                    Database
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Archives</h3>
+                        </div>
+                        <div class="panel-body">
+                        <!-- Category 1 content-->
+                            <ul class="list-group">
+                                <li class="list-group-item">
+
+                                    July 27, 09:32
+                                </li>
+                                <li class="list-group-item">
+
+                                    July 30, 20:12
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Top 5 Tags</h3>
+                        </div>
+                        <div class="panel-body">
+                        <!-- Category 1 content-->
+                            <ul class="list-group">
+                                <li class="list-group-item">
+                                    <span class="badge">6</span>
+                                    Python
+                                </li>
+                                <li class="list-group-item">
+                                    <span class="badge">4</span>
+                                    Django
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default btn-sm ">
+                                <span class="glyphicon glyphicon-star"></span> See all
+                            </button>
+                            <div class="container"><a href="#"><span class="label label-primary">See All</span></a></div>
+                        </div>
+                        <!-- End of panels -->
                     </div>
                 </div>
+
             </div>
-        </div>
-
-        <div class="container">
-            {% block header %}
-                <div class="page-header">
-                    <h1>Coding Blog</h1>
-                </div>
-            {% endblock %}
-
-            <div class="row">
-                {% block content %}{% endblock %}
-            </div>
-        </div>
-
-        <div class="container footer">
-            <div class="row">
-                <div class="span12">
-                    <p>Copyright &copy; {% now "Y" %}</p>
-                </div>
-            </div>
-        </div>
-
-
 
 
 
