--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="">Posts</a></li>
+                        <li class="active"><a href="{{ home }}">Posts</a></li>
                         {% load flatpages %}
                             {% get_flatpages as flatpages %}
                             {% for flatpage in flatpages %}
@@ -101,19 +101,14 @@
                         </div>
                         <div class="panel-body">
                         <!-- Categories  -->
+
                             <ul class="list-group">
-                                <li class="list-group-item">
-                                    <span class="badge">23</span>
-                                    Development
-                                </li>
-                                <li class="list-group-item">
-                                    <span class="badge">14</span>
-                                    Tools
-                                </li>
-                                <li class="list-group-item">
-                                    <span class="badge">14</span>
-                                    Database
-                                </li>
+                                {% for category in categories %}
+                                    <li class="list-group-item">
+                                        <span class="badge">23</span>
+                                        {{category}}
+                                    </li>
+                                {% endfor %}
                             </ul>
                         </div>
 
@@ -135,19 +130,17 @@
                         </div>
 
                         <div class="panel-heading">
-                            <h3 class="panel-title">Top 5 Tags</h3>
+                            <h3 class="panel-title">Tags</h3>
                         </div>
                         <div class="panel-body">
                         <!-- Category 1 content-->
                             <ul class="list-group">
+                                {% for tag in tags%}
                                 <li class="list-group-item">
                                     <span class="badge">6</span>
-                                    Python
+                                    {{tag}}
                                 </li>
-                                <li class="list-group-item">
-                                    <span class="badge">4</span>
-                                    Django
-                                </li>
+                                {% endfor %}
                             </ul>
                             <button type="button" class="btn btn-default btn-sm ">
                                 <span class="glyphicon glyphicon-star"></span> See all
