--- a/templates/blogengine/post_list.html
+++ b/templates/blogengine/post_list.html
@@ -8,11 +8,13 @@
                 <div class="container-fluid">
                 <h3><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h1>
                 <h4>{{ post.pub_date }}</h3>
-                {{ post.text|custom_markdown }}
+                {{ post.text|custom_markdown|truncatechars:800 }}
                 {% if post.category %}
+                    <br>
                     <a href="{{ post.category.get_absolute_url }}"><span class="label label-primary">{{ post.category.name }}</span></a>
                 {% endif %}
                 {% if post.tags %}
+                    <br>
                     {% for tag in post.tags.all %}
                         <a href="{{ tag.get_absolute_url }}"><span class="label label-success">{{ tag.name }}</span></a>
                     {% endfor %}
