--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -51,11 +51,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{% url 'home' %}">Blog</a>
+                    <a class="navbar-brand" href="{% url 'home' %}">Reg3x's Blog</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="{% url 'home' %}">Posts</a></li>
                         {% load flatpages %}
                             {% get_flatpages as flatpages %}
                             {% for flatpage in flatpages %}
