--- a/templates/blogengine/post_detail.html
+++ b/templates/blogengine/post_detail.html
@@ -3,16 +3,16 @@
     {% load custom_markdown %}
 
     {% block content %}
-        <h1>{{ object.title }}</h1>
-        <h3>{{ object.pub_date }}</h3>
-        {{ object.text|custom_markdown }}
+        <h1>{{ post.title }}</h1>
+        <h3>{{ post.pub_date }}</h3>
+        {{ post.text|custom_markdown }}
 
         {% if object.category %}
-            <a href="{{ object.category.get_absolute_url }}"><span class="label label-primary">{{ object.category.name }}</span></a>
+            <a href="{{ object.category.get_absolute_url }}"><span class="label label-primary">{{ post.category.name }}</span></a>
         {% endif %}
 
-        {% if object.tags %}
-            {% for tag in object.tags.all %}
+        {% if post.tags %}
+            {% for tag in post.tags.all %}
                 <a href="{{ tag.get_absolute_url }}"><span class="label label-success">{{ tag.name }}</span></a>
             {% endfor %}
         {% endif %}
