--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -62,11 +62,11 @@
                             {% endfor %}
 			            <li><a href="/feeds/posts/">RSS feed</a></li>
                     </ul>
-                    <form class="navbar-form navbar-right" role="search">
+                    <form action="" method="GET" class="navbar-form navbar-right" role="search">
                         <div class="form-group">
-                          <input type="text" class="form-control" placeholder="Search">
+                          <input type="text" name="q" class="form-control" placeholder="Search">
                         </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
+                        <button type="submit" class="btn btn-default">search</button>
                     </form>
                 </div><!--/.nav-collapse -->
             </div>
