--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -61,13 +61,21 @@
                                 <li><a href="{{ flatpage.url }}">{{ flatpage.title }}</a></li>
                             {% endfor %}
 			            <li><a href="/feeds/posts/">RSS feed</a></li>
+
                     </ul>
-                    <form action="{% url 'home' %}" method="GET" class="navbar-form navbar-right" role="search">
+                    <form action="{% url 'home' %}" method="GET" class="navbar-form navbar-left" role="search">
                         <div class="form-group">
                           <input type="text" name="q" class="form-control" placeholder="Search">
                         </div>
                         <button type="submit" class="btn btn-default">search</button>
                     </form>
+                    <ul class="nav navbar-nav navbar-right">
+                            {% if user.is_anonymous %}
+                                <li><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
+                            {% else %}
+                                <li><a href="{% url 'django.contrib.auth.views.logout' %}">Logout {{user.strip}}</a></li>
+                            {% endif %}
+                    </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
