--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -43,7 +43,7 @@
 
         <!-- Navegation bar -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
@@ -61,24 +61,26 @@
                                 <li><a href="{{ flatpage.url }}">{{ flatpage.title }}</a></li>
                             {% endfor %}
 			            <li><a href="/feeds/posts/">RSS feed</a></li>
-
                     </ul>
-                    <form action="{% url 'home' %}" method="GET" class="navbar-form navbar-left" role="search">
+                    <form action="{% url 'home' %}" method="GET" class="navbar-form navbar-right" role="search">
                         <div class="form-group">
                           <input type="text" name="q" class="form-control" placeholder="Search">
+                          <button type="submit" class="btn btn-default">search</button>
                         </div>
-                        <button type="submit" class="btn btn-default">search</button>
+
                     </form>
                     <ul class="nav navbar-nav navbar-right">
                             {% if user.is_anonymous %}
                                 <li><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
                             {% else %}
                                 <li><a href="{% url 'django.contrib.auth.views.logout' %}">Logout {{user.strip}}</a></li>
+                                <li><a href="">DashBoard</a></li>
                             {% endif %}
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
+        <!-- End of Navegation bar -->
 
             <div class="container-fluid">
                 <div class="jumbotron">
@@ -99,6 +101,7 @@
                     </ul>
                 </div>
 
+                {% if categories and tags and archives%}
                 <!-- Side bar -->
                 <div class="col-sm-3 col-sm-offset-1">
                     <div class="panel panel-default">
@@ -148,11 +151,11 @@
                                 {% endfor %}
                             </ul>
                         </div>
-
                         <!-- End of panels -->
                     </div>
                 </div>
-
+                {% endif %}
+                <!-- End of SideBar -->
             </div>
 
 
