adding dashboard section

--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -74,7 +74,7 @@
                                 <li><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
                             {% else %}
                                 <li><a href="{% url 'django.contrib.auth.views.logout' %}">Logout {{user.strip}}</a></li>
-                                <li><a href="">DashBoard</a></li>
+                                <li><a href="{% url 'dashboard' %}">DashBoard</a></li>
                             {% endif %}
                     </ul>
                 </div><!--/.nav-collapse -->
