--- a/templates/blogengine/post_form.html
+++ b/templates/blogengine/post_form.html
@@ -1,13 +1,9 @@
 {% extends "blogengine/includes/base.html" %}
+{% load bootstrap %}
 {% block content %}
     <form method="post" action="" role="form">
         {% csrf_token %}
         <!-- This line inserts a CSRF token. -->
-        <table>
-            {{ form.as_table }}
-            <!-- This line displays lines of the form.-->
-        </table>
-        <p><input type="submit" value="Create" /></p>
-    </form>
-
+            {{ form|bootstrap }}
+        <button type="submit" class="btn btn-default">Update/Create</button>
 {% endblock %}
