--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,22 +1,31 @@
 {% extends "blogengine/includes/base.html" %}
+{% load bootstrap %}
+
 {% block content %}
     {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
+        <p class="bg-danger">Your username and password didn't match. Please try again</p>
     {% endif %}
 
-    <form method="post" action="{% url 'django.contrib.auth.views.login' %}" role="form" class="form-horizontal">{% csrf_token %}
-    <table>
-    <tr>
-        <td>{{ form.username.label_tag }}</td>
-        <td>{{ form.username }}</td>
-    </tr>
-    <tr>
-        <td>{{ form.password.label_tag }}</td>
-        <td>{{ form.password }}</td>
-    </tr>
-    </table>
+<div class="container">
+    <form method="post" action="{% url 'django.contrib.auth.views.login' %}" class="form-horizontal" role="form">{% csrf_token %}
+      <div class="form-group">
+        <div class="col-sm-6">
+            {{form.username |bootstrap}}
+        </div>
+      </div>
 
-    <input type="submit" value="login" />
-    <input type="hidden" name="next" value="{{ next }}" />
+      <div class="form-group">
+        <div class="col-sm-6">
+            {{form.password |bootstrap}}
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-sm-6">
+            <button type="submit" class="btn btn-default">Sign in</button>
+            <input type="hidden" name="next" value="{{ next }}" />
+        </div>
+      </div>
     </form>
+</div>
 {% endblock %}
