--- a/templates/blogengine/post_form.html
+++ b/templates/blogengine/post_form.html
@@ -3,7 +3,7 @@
 {% block content %}
     <form method="post" action="" role="form">
         {% csrf_token %}
-        <!-- This line inserts a CSRF token. -->
-            {{ form|bootstrap }}
+        {{ form|bootstrap }}
         <button type="submit" class="btn btn-default">Update/Create</button>
+    </form>
 {% endblock %}
