--- a/templates/blogengine/post_confirm_delete.html
+++ b/templates/blogengine/post_confirm_delete.html
@@ -4,7 +4,7 @@
     <h3>Do you want to delete this object?</h3>
     <form method="post" action="" role="form">
         {% csrf_token %}
-        {{ form |bootstrap}}
+        {{ form }}
         <button type="submit" class="btn btn-default">Confirm Delete</button>
     </form>
 {% endblock %}
