--- a/templates/blogengine/dashboard.html
+++ b/templates/blogengine/dashboard.html
@@ -11,8 +11,8 @@
                                 <h5>{{ post.pub_date }}</h5>
                             </tr>
                             <tr>
-                                <a href="{% url 'updatepost' post.slug %}"><span class="glyphicon glyphicon-edit label label-success"> Update</span></a>
-                                <a href="{% url 'deletepost' post.slug %}"><span class="glyphicon glyphicon-remove-circle label label-danger"> Delete</span></a>
+                                <a href="{% url 'blogengine:updatepost' post.slug %}"><span class="glyphicon glyphicon-edit label label-success"> Update</span></a>
+                                <a href="{% url 'blogengine:deletepost' post.slug %}"><span class="glyphicon glyphicon-remove-circle label label-danger"> Delete</span></a>
                             </tr>
                         </table>
                     </div>
