--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -50,7 +50,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{% url 'home' %}">Reg3x's Blog</a>
+                    <a class="navbar-brand" href="{% url 'blogengine:home' %}">Reg3x's Blog</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
@@ -61,7 +61,7 @@
                             {% endfor %}
 			            <li><a href="/feeds/posts/">RSS feed</a></li>
                     </ul>
-                    <form action="{% url 'home' %}" method="GET" class="navbar-form navbar-right" role="search">
+                    <form action="{% url 'blogengine:home' %}" method="GET" class="navbar-form navbar-right" role="search">
                         <div class="form-group">
                           <input type="text" name="q" class="form-control" placeholder="Search">
                           <button type="submit" class="btn btn-default">search</button>
@@ -70,10 +70,10 @@
                     </form>
                     <ul class="nav navbar-nav navbar-right">
                             {% if user.is_anonymous %}
-                                <li><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
+                                <li><a href="{% url 'blogengine:django.contrib.auth.views.login' %}">Login</a></li>
                             {% else %}
-                                <li><a href="{% url 'django.contrib.auth.views.logout' %}">Logout {{user.strip}}</a></li>
-                                <li><a href="{% url 'dashboard' %}">DashBoard</a></li>
+                                <li><a href="{% url 'blogengine:django.contrib.auth.views.logout' %}">Logout {{user.strip}}</a></li>
+                                <li><a href="{% url 'blogengine:dashboard' %}">DashBoard</a></li>
                             {% endif %}
                     </ul>
                 </div><!--/.nav-collapse -->
