switched to elasticsearch as search engine

--- a/templates/blogengine/includes/base.html
+++ b/templates/blogengine/includes/base.html
@@ -61,7 +61,7 @@
                             {% endfor %}
 			            <li><a href="/feeds/posts/">RSS feed</a></li>
                     </ul>
-                    <form action="{% url 'blogengine:home' %}" method="GET" class="navbar-form navbar-right" role="search">
+                    <form action="{% url 'haystack_search' %}" method="GET" class="navbar-form navbar-right" role="search">
                         <div class="form-group">
                           <input type="text" name="q" class="form-control" placeholder="Search">
                           <button type="submit" class="btn btn-default">search</button>
