--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -1,19 +1,10 @@
 {% extends 'blogengine/includes/base.html' %}
 
 {% block content %}
-    <h2>Search</h2>
+    <h2>Searching the Database</h2>
+       <h4>using ElasticSearch</h4>
 
     <form method="get" action=".">
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td>&nbsp;</td>
-                <td>
-                    <input type="submit" value="Search">
-                </td>
-            </tr>
-        </table>
-
         {% if query %}
             <h3>Results</h3>
 
